<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginBottom="342dp"
        android:text="@string/okButton"
        android:textColor="#00E676"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <RadioButton
        android:id="@+id/buttonYes"
        android:layout_width="68dp"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="440dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/buttonYes"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonNo" />

    <RadioButton
        android:id="@+id/buttonNo"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="216dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/buttonNo"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="143dp"
        android:layout_height="30dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/labelAnswer"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonYes"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputQuestion"
        android:layout_width="308dp"
        android:layout_height="72dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif-black"
        android:hint="@string/inputQuestion"
        android:minHeight="48dp"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textColorHint="#263238"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/output"
        android:layout_width="348dp"
        android:layout_height="265dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="51dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/output"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>